<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_primary"
            android:title="@string/navMessages"
            android:icon="@drawable/ic_messages"/>
        <item
            android:id="@+id/nav_resolved"
            android:title="@string/navResolved"
            android:icon="@drawable/ic_checked"/>
        <item
            android:id="@+id/nav_confidential"
            android:title="@string/navConfidential"
            android:icon="@drawable/ic_move_confidential" />
        <item
            android:id="@+id/nav_deleted"
            android:title="@string/navDeleted"
            android:icon="@drawable/ic_delete" />
    </group>

    <item android:title="@string/navManage">
        <menu>
            <item
                android:id="@+id/nav_assignees"
                android:title="@string/navAssignees"
                android:icon="@drawable/ic_assignees"/>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/navSettings"
                android:icon="@drawable/ic_menu_manage" />
        </menu>
    </item>

</menu>
