<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_primary"
            android:title="@string/navMessages"
            android:icon="@drawable/ic_messages"/>
        <item
            android:id="@+id/nav_resolved"
            android:title="@string/navResolved"
            android:icon="@drawable/ic_checked"/>
    </group>

    <item android:title="@string/navManage">
        <menu>
            <item
                android:id="@+id/nav_communicate"
                android:title="@string/navCommunicate"
                android:icon="@drawable/ic_chat"/>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/navSettings"
                android:icon="@drawable/ic_menu_manage"/>
        </menu>
    </item>

</menu>
