<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="259dp"
        android:layout_height="378dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"
                android:text="@string/forgot_password_lbl"
                android:textColor="#8f8797" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/action_sign_in"
                app:backgroundTint="@color/colorLoginBtn"
                app:cornerRadius="4dp"
                app:rippleColor="@color/colorAccent" />

            <TextView
                android:id="@+id/txtSignUpNowLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="31dp"
                android:gravity="center"
                android:text="@string/not_a_member_lbl" />

            <!--<android.support.design.button.MaterialButton-->
                <!--android:id="@+id/btnFacebookLogin"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/btnFacebookLogin"-->
                <!--app:backgroundTint="@color/colorFacebookLoginBtn"-->
                <!--app:cornerRadius="4dp"-->
                <!--app:rippleColor="@color/colorAccent" />-->

            <!--<com.google.android.gms.common.SignInButton-->
                <!--android:id="@+id/btnGoogleLogin"-->
                <!--android:layout_width="match_parent"-->
                <!--android:gravity="center"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:rippleColor="@color/colorAccent" />-->

            <android.support.design.button.MaterialButton
                android:id="@+id/btnGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnGoogleLogin"
                app:backgroundTint="@color/colorGoogleLoginBtn"
                app:cornerRadius="4dp"
                app:rippleColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>